added the msg in the string res file

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Memory Booster</string>
+    <string name="message">Made with ❤ by Hemant</string>
 </resources>
